# get-favicon

./: .gitignore  README.md  app.py  config.py  getfavicon.py  geticon.py  pyproject.toml  requirements.txt
store/: __init__.py  filecache.py  memory.py  redis_.py
