[tool.poetry]
name = "get-favicons"
version = "0.1.0"
description = ""
authors = ["syrinka <syrinka@foxmail.com>"]
readme = "README.md"
packages = [{include = "get_favicons"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
environs = "^9.5.0"
httpx = "^0.23.1"
flask = {extras = ["async"], version = "^2.2.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
