[tool.poetry]
name = "get-favicons"
version = "0.1.0"
description = ""
authors = ["syrinka <syrinka@foxmail.com>"]
readme = "README.md"
packages = [{include = "get_favicons"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
environs = "^9.5.0"
httpx = "^0.23.1"
flask = {extras = ["async"], version = "^2.2.2"}
lxml = "4.9.0"
cssselect = "^1.2.0"


[tool.poetry.group.redis.dependencies]
redis = "^4.4.0"


[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"


[tool.poetry.group.prod-win.dependencies]
waitress = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
